fixed winbox issue on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -218,10 +218,10 @@ nav ul li {
   .winbox{
     width: 75vw !important;
     height:50vh !important;
-    top: 10vh !important;
+    top: 30vh !important;
     right:0vh !important;
     bottom:0vh !important;
-    left: -60vw !important;
+    left: 10vw !important;
   }
 
 }
